--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "feather-icons": "^4.29.0",
+    "swiper": "^8.0.7"
   },
   "target": "web"
 }
